<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_IO" Id="{64987411-b046-42d2-9423-04a76a692e64}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	(* Digital IO to Byte *)
	DigitalInputIO AT %I* 	: BYTE; //EL1088 1EA
	DigitalOutputIO AT %Q* 	: BYTE; //EL2088 1EA
	
	(* Analog IN / OUT to INT *)
	aAnalogInputIO AT %I* : ARRAY[1..nNumController] OF INT; //EL3064 3EA
	aAnalogOutputIO AT %Q*	: ARRAY[1..nNumController] OF INT; //EL4004 3EA
	
	(*Solenoid Valve*)
	OutputSolValve AT %Q* : DWORD; //16열 32점
	
	(* Read and Write of Device Control Value*)
	aMaxValueController		: ARRAY[1..nNumController]OF REAL ; //Device Max Value from UI
	aController 			: ARRAY[1..nNumController] OF FB_ControlRampGenerator; //MFC 0 ~ 5V
	aController_TV 			: ARRAY[1..nNumController] OF REAL; //Target Value from UI
	aController_RampTime 	: ARRAY[1..nNumController] OF INT;
	aController_PV 			: ARRAY[1..nNumController] OF REAL; //Present Value from Device
	aController_CV 			: ARRAY[1..nNumController] OF REAL; //Current Value from RampingController
	
	(* Present Value Meter Display*)
	// aInputState				: ARRAY[1..5] OF WORD; // Digital Input from Device (Switch)
	//aOutputCmd				: ARRAY[1..3] OF WORD; // Digital Command from UI
	aInterlockSet			: ARRAY[1..5] OF REAL; // UI Interlokc Setting Value, 5로 수정 
	aInterlockEnable		: ARRAY[1..3] OF DWORD; // UI Interlock Enable Setting, 3으로 수정
	KL3464MaxValueH: INT;
	num: INT;
END_VAR

VAR_GLOBAL CONSTANT
	EL3064MaxValueH	: REAL := 16383; //0~5V Half Input
	EL3064MaxValue 	: REAL := 32767; //0~10V
	EL4004MaxValueH	: REAL := 16383; //0~5V Half Output
	EL4004MaxValue 	: REAL := 32767; //4~20mA
// 	KL3152MaxValue	: REAL := 65535; //4~20mA
// 	KL3204MaxValue 	: REAL := 32767; //4~20mA
	nNumController	: INT := 18 ; //MFC 12EA, Eurotherm 6EA
	nNumMFC			: INT := 12;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>