<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="RCP" Id="{ac971452-8a9c-4534-9b84-14e8f84d2615}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	aRecipe		: ARRAY[1..100] OF RecipeStep; //Recipe Structure
	iRcpTotalStep			: INT; //Recip Total Number
	
	iRcpStepN				: INT;
	cmd_RcpOperation		: INT; // 0:Inital State, 10:RUN, 20:PAUSE, 30:RESTART, 40:STOP, 60:SKIP, 90:ManualOperation
	userState				: INT;	// 0:Inital State, 10:RUN, 20:PAUSE, 30:RESTART, 40:STOP, 50:END, 60:SKIP
	
	Pause_ET				: TIME := T#0S;
	RecipeRunET 			: RecipeRunET;
	
	
	fbModbusManager:FB_E2408_Manager;
	fbTempRamping : ARRAY[1..6]OF FB_TEMP_RAMPING;
	RampingRingEdge : ARRAY[1..6]OF R_TRIG;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>